k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-demo
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-demo
  template:
    metadata:
      labels:
        app: react-demo
    spec:
      containers:
        - name: react-demo
          image: YOUR_DOCKERHUB/react-demo:latest
          ports:
            - containerPort: 80
