k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-demo
  namespace: demo
spec:
  type: NodePort
  selector:
    app: react-demo
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31080
